Fix: header link is too wide

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -12,5 +12,6 @@ header
         text-decoration: none;
         color: var(--secondary-color);
         font-size: 2em;
+        width: max-content;
     }
 }
